[workspace]
members = ["."]
default-members = ["."]

[workspace.package]
authors = ["Dr Maxim Orlovsky <orlovsky@ubideco.org>"]
homepage = "https://vesper-lang.org"
repository = "https://github.com/UBIDECO/vesper"
rust-version = "1.66"
edition = "2021"
license = "Apache-2.0"

[package]
name = "vesper"
version = "0.1.0"
description = "DESCRIPTION"
keywords = ["KEYWORDS"]
categories = ["CATEGORIES"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"
exclude = [".github"]

[dependencies]

[features]
default = []
all = []

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
