[workspace]
members = ["."]
default-members = ["."]

[workspace.package]
authors = ["Dr Maxim Orlovsky <orlovsky@ubideco.org>"]
homepage = "https://vesper-lang.org"
repository = "https://github.com/UBIDECO/vesper"
rust-version = "1.66"
edition = "2021"
license = "Apache-2.0"

[package]
name = "vesper-lang"
version = "0.1.0"
description = "Vesper: declarative human-readable structural language"
keywords = []
categories = ["compilers", "value-formatting"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"
exclude = [".github"]

[lib]
name = "vesper"

[dependencies]
amplify = "4.6.0"
strict_encoding = "2.7.0-beta.1"

[features]
default = []
all = []

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
