[workspace]
members = ["."]
default-members = ["."]

[workspace.package]
authors = ["Dr Maxim Orlovsky <orlovsky@ubideco.org>"]
homepage = "https://vesper-lang.org"
repository = "https://github.com/UBIDECO/vesper"
rust-version = "1.77"
edition = "2021"
license = "Apache-2.0"

[package]
name = "vesper-lang"
version = "0.2.1"
description = "Vesper: declarative human-readable structural language"
keywords = []
categories = ["compilers", "value-formatting"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"
exclude = [".github"]

[lib]
name = "vesper"

[dependencies]
amplify = "4.8.0"
strict_encoding = "2.8.0"

[features]
default = []
all = []

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
